--- a/jenkinsfile
+++ b/jenkinsfile
@@ -7,6 +7,7 @@ pipeline {
                 sh '''
                 date
                 pwd
+                cal
                 '''
             }
         }
